<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/map_image_content_description"
        android:paddingStart="@dimen/margin_normal"
        android:paddingEnd="@dimen/margin_normal"
        android:src="@drawable/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonEmail"
        style="@style/FirebaseUI.Button.AccountChooser.EmailButton"
        android:layout_width="@dimen/login_buttons_width"
        android:layout_height="wrap_content"
        android:text="@string/login_email"
        app:layout_constraintBottom_toTopOf="@id/buttonGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonGoogle"
        style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
        android:layout_width="@dimen/login_buttons_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:text="@string/login_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>